--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "marvel-heroes",
   "version": "0.1.0",
+  "homepage": "http://aidosmen.github.io/marvel-heroes",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
