--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marvel-heroes",
   "version": "0.1.0",
-  "homepage": "http://aidosmen.github.io/marvel-heroes",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
